# scrutiny-test-framework

./: .codebanner.json  CMakeLists.txt  LICENSE  README.md
scripts/: build.sh  format_code.sh
scrutinytest/: CMakeLists.txt
scrutinytest/inc/scrutinytest/: assertions.hpp  config.hpp  macros.hpp  scrutinytest.hpp  streams.hpp  testcase.hpp  testcase_handler.hpp  testresult.hpp  testrunner.hpp  testsuite.hpp  types.hpp
scrutinytest/src/: scrutinytest.cpp  testcase.cpp  testcase_handler.cpp  testresult.cpp  testrunner.cpp  testsuite.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  test1.cpp  test_basic.cpp  test_custom_suite.cpp  test_expect_assert_extensions.cpp
